--- a/proyectoFinalConMVC/proyectoFinalConMVC.csproj
+++ b/proyectoFinalConMVC/proyectoFinalConMVC.csproj
@@ -213,6 +213,7 @@
     <Content Include="Views\Web.config" />
     <Content Include="Views\Inicio\Registrar.cshtml" />
     <Content Include="Views\Inicio\Login.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
